--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required (VERSION 3.8)
 
-project ("rvtest")
+project ("ndsrvptest")
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static")
-SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
-SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -static")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mext-dsp")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mext-dsp")
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS}")
 
 add_executable(spike-test "spike-test.cpp")
 add_executable(asm-test "asm-test.cpp")
